--- a/src/templates/Home/base.html
+++ b/src/templates/Home/base.html
@@ -12,6 +12,7 @@
         my blog: 
             <a href="/">Home</a>
             <a href="/login">Sign in</a>
+            <a href="/register">Register</a>
      </div>
        <hr>
 
