--- a/src/templates/Register/register.html
+++ b/src/templates/Register/register.html
@@ -1,6 +1,15 @@
 <h1>Register</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
+    
+    <p>     {{ form.firstname.label }}  <br>
+        {{ form.firstname(size=32)}} 
+    </p>
+
+    <p> 
+        {{ form.lastname.label }}  <br>
+        {{ form.lastname(size=32)}}  
+    </p>
 
     <p>
         {{ form.username.label }} <br>
