--- a/src/templates/Register/register.html
+++ b/src/templates/Register/register.html
@@ -2,7 +2,9 @@
 <form action="" method="post">
     {{ form.hidden_tag() }}
     
-    <p>     {{ form.firstname.label }}  <br>
+    
+    <p> 
+        {{ form.firstname.label }}  <br>
         {{ form.firstname(size=32)}} 
     </p>
 
@@ -19,6 +21,11 @@
     <p>
         {{ form.email.label }} <br>
         {{ form.email(size=32)}}
+    </p>
+
+    <p>
+        {{ form.email2.label }} <br>
+        {{ form.email2(size=32)}}
     </p>
 
 
