--- a/src/templates/Home/base.html
+++ b/src/templates/Home/base.html
@@ -2,20 +2,16 @@
 <html>
     <head>
        {% if title %}
-       <title>{{ title }} - STAKr</title>
+       <title>{{ title }} - my blog</title>
        {% else %}
-       <title>STAKr</title>
+       <title>Welcome to my blog</title>
        {% endif %}
     </head>
     <body>
        <div>
-        Links: 
+        my blog: 
             <a href="/">Home</a>
-			{% if current_user.is_anonymous %}
             <a href="/login">Sign in</a>
-			{% else %}
-			<a href="/logout">Log Out</a>
-			{%endif %}
             <a href="/register">Register</a>
      </div>
        <hr>
