--- a/src/templates/Home/home.html
+++ b/src/templates/Home/home.html
@@ -1,15 +1,10 @@
 {% extends "Home/base.html" %}
  
 {% block content %}
-	{% if current_user.is_anonymous %}
-	<h1>Hello user!</h1>
-	{% else %}
-    <h1>Hello, {{ current_user.username }}!</h1>
-	{% endif %}
-	<p>Project Contributors: </p>
+    <h1>Hello, {{ user.username }}!</h1>
     {% for post in posts %}
         <div>
-            <p>{{ post.author.username }}: {{ post.body }}</p>
+            <p>{{ post.author.username }} says: <b>{{ post.body }}</b></p>
         </div>
     {% endfor %}
 {% endblock %}
