--- a/src/templates/Home/home.html
+++ b/src/templates/Home/home.html
@@ -2,7 +2,7 @@
  
 {% block content %}
 	{% if current_user.is_anonymous %}
-	<h1>Hello user!</h1>
+	<h1>Welcome to SPAKr!</h1>
 	{% else %}
     <h1>Hello, {{ current_user.username }}!</h1>
 	{% endif %}
