--- a/src/templates/Login/login.html
+++ b/src/templates/Login/login.html
@@ -15,4 +15,5 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+    <a href="/register">Register for a new account!</a>
 {% endblock %}
