--- a/src/templates/Calendar/calendar.html
+++ b/src/templates/Calendar/calendar.html
@@ -6,27 +6,52 @@
 </head>
 
 <body style="background-color: #252423;">
-        <div class="month">
-            <ul class="month-header">
-                <li class="prev">&#10094;</li>
-                <li class="next">&#10095;</li>
-                <li>{{month+" "}}<span style="font-size:18px">{{year}}</span></li>
-            </ul>
-        </div>
-        <div>
-            <ul class="days">
-                {% for day in days %}
-                <li>{{day}}</li>
-                {% endfor %}
-                {% for date in dates %}
-                {% if date==0 %}
-                <li class = "Nodate"></li>
-                {% else %}
-                <li class = "date">{{date}}</li>
-                {% endif %}
-                {% endfor %}
-            </ul>
-        </div>
+    <div class="month">
+        <ul class="month-header">
+            <div class="prev">&#10094;</div>
+            <div class="next">&#10095;</div>
+            <li>{{month[1]+" "}}<span style="font-size:18px">{{year}}</span></li>
+        </ul>
+    </div>
+    <div>
+        <ul class="days">
+            {% for day in days %}
+            <li>{{day}}</li>
+            {% endfor %}
+
+            {% for date in dates %}
+            {% if date==0 %}
+            <li class="Nodate"></li>
+            {% else %}
+            <li class="date" id="{{date}}">{{date}}</li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
 </body>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+
+<script type="text/javascript">
+    document.getElementsByClassName("next")[0].onclick = () => {
+        location.href = '/calendar?month={{month[0]+1}}&year={{year}}'
+    }
+    document.getElementsByClassName("prev")[0].onclick = () => {
+        location.href = '/calendar?month={{month[0]-1}}&year={{year}}'
+    }
+
+    $(function() {
+        $.getJSON('/getEventsOnMonth',
+            function(data) {
+                data = data[0]
+                data.forEach((element, index) => {
+                    if (element.length!=0) {
+                        document.getElementById(index).outerHTML = "<li class='date-with-content' id='4'>4<h1>Netflix</h1></li>"
+                    }
+                });
+            });
+            return false;
+        });
+</script>
 
 </html>
