--- a/src/templates/Register/register.html
+++ b/src/templates/Register/register.html
@@ -38,5 +38,8 @@
         {{ form.password2.label }} <br>
         {{ form.password2(size=32)}}
     </p>
+
     <p>{{ form.submit() }} </p>
+    <p>{{ form.submit() }} </p>
+    
 </form>
