Committing current progress: working on Time field for forms/Settings.py

--- a/src/templates/Settings/settings.html
+++ b/src/templates/Settings/settings.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h1>Settings:</h1>
 
-	<p>Availability: </p>
+	<p>Availability between 9am-10pm (please use 24 hour clock): </p>
 	<form action="" method="post" novalidate>
 		<p>
             {{ form.available.label }}<br>
