--- a/src/templates/Home/home.html
+++ b/src/templates/Home/home.html
@@ -1,8 +1,8 @@
-{% extends "Home/base.html" %}
+{% extends "base.html" %}
  
 {% block content %}
 	{% if current_user.is_anonymous %}
-	<h1>Welcome to SPAKr!</h1>
+	<h1>Welcome to STAKr!</h1>
 	{% else %}
     <h1>Hello, {{ current_user.username }}!</h1>
 	{% endif %}
