Update working on the settings page, database not updating with new values

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,7 +14,8 @@
 			{% if current_user.is_anonymous %}
             <a href="/login">Sign in</a>
 			{% else %}
-			<a href="/logout">Log Out</a>
+      <a href="/logout">Log Out</a>
+      <a href="/settings">Settings</a>
 			{%endif %}
             <a href="/register">Register</a>
      </div>
