--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,6 +16,7 @@
 			{% else %}
       <a href="/logout">Log Out</a>
       <a href="/settings">Settings</a>
+      <a href="/calendar">Meetings</a>
 			{%endif %}
             <a href="/register">Register</a>
      </div>
