--- a/src/static/css/calendar.css
+++ b/src/static/css/calendar.css
@@ -51,5 +51,25 @@ body {font-family: Verdana, sans-serif;}
 
 .date-with-content {
   border: 1px solid lightgray;
-  padding: 0;
+  padding: 5px;
+}
+
+.event-block {
+  text-align: left;
+  border: 2px solid white;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.date-slots {
+  text-align: center;
+  border-radius: 10px;
+  padding: 5px;
+  padding-top: 10px;
+}
+
+/*create new event's form */
+#make-event-form {
+  color: white;
 }
