--- a/src/templates/Home/home.html
+++ b/src/templates/Home/home.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
  
 {% block content %}
+    <div style='color:dodgerblue'>
+    <h1>Calender Secheduling Websitepage</h1>
+    <p> You are a VIP !!!!!!!!</p>
+    </div>
+
 	{% if current_user.is_anonymous %}
 	<h1>Welcome to STAKr!</h1>
 	{% else %}
