--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,37 +1,6 @@
 
 
-<!DOCTYPE html>
-<html lang="en">
-  
-<head>
-  
-      
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- Import your css file here -->
-    <link rel= "stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</head>
-
-<body style="background-color:#6E6E6E;">
-  
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="/">Home</a></li>
-         <li class="breadcrumb-item"><a href="/settings">Settings</a></li>
-         <li class="breadcrumb-item"><a href="/login">Sign in</a></li>
-         <li class="breadcrumb-item "><a href="logout">Log out</li>
-      </ol>
-    </nav>
-
-    <div class="container">
-        <div id="mainheader">
-        <h1 >Calender Secheduling Websitepage</h1>
-        <p> You are a VIP !!!!!!!!</p>
-        </div>
+<!DOCTYPE html>  
 <html>
     <head>
        {% if title %}
@@ -39,33 +8,35 @@
        {% else %}
        <title>STAKr</title>
        {% endif %}
+       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-    <body>
-       <div>
-        Links: 
-            <a href="/">Home</a>
-			{% if current_user.is_anonymous %}
-            <a href="/login">Sign in</a>
-            <a href="/register">Register</a>
-			{% else %}
-      <a href="/logout">Log Out</a>
-      <a href="/settings">Settings</a>
-			{%endif %}
-     </div>
-       <hr>
+    <body style="background-color: #252423; color:white">
 
-       {% block content %}{% endblock %}
-       {% block calendar %}{% endblock %}
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            {% if current_user.is_anonymous %}
+            <li class="breadcrumb-item"><a href="/login">Sign in</a></li>
+            <li class="breadcrumb-item"><a href="/register">Register</a></li>
+            {% else %}
+            <li class="breadcrumb-item"><a href="/logout">Log Out</a></li>
+            <li class="breadcrumb-item"><a href="/settings">Settings</a></li>
+            {%endif %}
+        </ol>
+      </nav>
 
-       {% with messages = get_flashed_messages() %}
-         {% if messages %}
-            <ul>
-               {% for message in messages %}
-                  <li>{{ message }}</li>
-              {% endfor %}
-            </ul>
-         {% endif %}
-       {% endwith %} 
-      </body>
+      {% block content %}{% endblock %}
+      {% block calendar %}{% endblock %}
+
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul>
+              {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %} 
     </body>
 </html>
