--- a/src/templates/Home/home.html
+++ b/src/templates/Home/home.html
@@ -2,7 +2,7 @@
  
 {% block content %}
     <div style='color:dodgerblue'>
-    <h1>Calender Secheduling Websitepage</h1>
+    <h1>STAKr Secheduling</h1>
     <p> You are a VIP !!!!!!!!</p>
     </div>
 
