--- a/src/templates/Home/base.html
+++ b/src/templates/Home/base.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   
@@ -11,12 +9,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- Import your css file here -->
-    <link rel= "stylesheet" href="style.css">
+    <link rel= "stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color:#6E6E6E;">
+
+<body class="bg-img" >
+  
   
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
@@ -26,7 +26,9 @@
          <li class="breadcrumb-item "><a href="logout">Log out</li>
       </ol>
     </nav>
-
+    
+      <div class="bg"> </div><!--  background image  -->
+      
     <div class="container">
         <div id="mainheader">
         <h1 >Calender Secheduling Websitepage</h1>
@@ -41,14 +43,15 @@
        {% endif %}
     </head>
     <body>
+
        <div>
         Links: 
             <a href="/">Home</a>
-			{% if current_user.is_anonymous %}
+      {% if current_user.is_anonymous %}
             <a href="/login">Sign in</a>
-			{% else %}
-			<a href="/logout">Log Out</a>
-			{%endif %}
+      {% else %}
+      <a href="/logout">Log Out</a>
+      {%endif %}
             <a href="/register">Register</a>
      </div>
        <hr>
