--- a/src/templates/Register/register.html
+++ b/src/templates/Register/register.html
@@ -1,12 +1,96 @@
 {% extends "Home/base.html" %}
 
 {% block content %}
-<h1>Register</h1>
+<!-- <h1>Register</h1> -->
+<!DOCTYPE html>
+<html>
+<head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for the submit button */
+.register {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.register:hover {
+  opacity: 1;
+}
+
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+
 <form action="" method="post">
     {{ form.hidden_tag() }}
     
+        <div class="container">
+          <h1>Register</h1>
+          <p>Please fill in this form to create an account.</p>
+          <hr>
     
-    <p> 
+    <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">First and last name</span>
+        </div>
+        <input type="text" placeholder="firstname"name="firstname" required>
+        <input type="text" placeholder="lastname"name="lastname" required>
+      </div>
+    <!-- <p> 
         {{ form.firstname.label }}  <br>
         {{ form.firstname(size=32)}}
     </p>
@@ -14,42 +98,76 @@
     <p> 
         {{ form.lastname.label }}  <br>
         {{ form.lastname(size=32)}}  
-    </p>
+    </p> -->
 
     <p>
-        {{ form.username.label }} <br>
-        {{ form.username(size=32)}}
+        
+<label for="username"><b>Username</b></label> <br>
+      
+    <input type="text" placeholder="Enter username" name="username" required>
+   
+        <!-- {{ form.username.label }} <br>
+        {{ form.username(size=32)}} -->
 		{% for error in form.username.errors %}
 		<span style="color: red;">[{{ error}}]</span>
 		{% endfor %}
     </p>
 
     <p>
-        {{ form.email.label }} <br>
-        {{ form.email(size=32)}}
+     <label for="email"><b>Email</b></label> <br>
+     
+    <input type="text" placeholder="Enter email" name="email" required>
+        <!-- {{ form.email.label }} <br>
+        {{ form.email(size=32)}} -->
 		{% for error in form.email.errors %}
 		<span style="color: red;">[{{ error}}]</span>
 		{% endfor %}
     </p>
 
     <p>
-        {{ form.email2.label }} <br>
-        {{ form.email2(size=32)}}
+        <label for="email2"><b>Repeat Email</b></label> <br>
+        <input type="text" placeholder="Repeat email" name="email2" required>
+    
+        <!-- {{ form.email2.label }} <br>
+        {{ form.email2(size=32)}} -->
     </p>
 
 
     <p>
-        {{ form.password.label }} <br>
-        {{ form.password(size=32)}}
+        <label for="psw"><b>Password</b></label><br>
+    <input type="password" placeholder="Enter password" name="psw" required>
+
+
+        <!-- {{ form.password.label }} <br>
+        {{ form.password(size=32)}} -->
 		{% for error in form.password.errors %}
 		<span style="color: red;">[{{ error}}]</span>
 		{% endfor %}
     </p>
 
     <p>
-        {{ form.password2.label }} <br>
-        {{ form.password2(size=32)}}
+        <label for="password2"><b>Repeat Password</b></label><br>
+        <input type="password" placeholder="Repeat password" name="password2" required>
+        <!-- {{ form.password2.label }} <br>
+        {{ form.password2(size=32)}} -->
     </p>
-    <p>{{ form.submit() }} </p>
+    <hr>
+    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+    
+    <button type="submit" class="register">Register</button>
+</div>
+    <!-- <p>{{ form.submit() }} </p> -->
 </form>
+<div class="container signin">
+    <p>Already have an account? <a href="#">Sign in</a>.</p>
+  </div>
+</form>
+
+</body>
+</html>
+  
+
+
 {% endblock %}
+
+
