--- a/src/templates/Login/login.html
+++ b/src/templates/Login/login.html
@@ -3,99 +3,6 @@
 
 {% block content %}
 
-<style>
-    /*This is the profile login picture*/
-    .material-icons.anonymous-profile{
-        font-size: 150px;
-        text-align: center;
-        position: absolute;
-        left: 649px;
-        top: 150px;
-    }
-
-    /*this is the signup link*/
-    #signup-link{
-        position: absolute;
-        width: 200px; 
-        height: 21px; 
-        left: 628px; 
-        top: 486px; 
-        font-family: "Oxygen", sans-serif; 
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px; 
-        line-height: 18px;
-        display: flex;
-        align-items: center;
-        text-decoration-line: underline;
-        text-transform: uppercase;
-        color: #E0E0E0;
-    }
-
-    /*this is the username form area*/
-    .login-username{
-        position: absolute; 
-        width: 556px;
-        height: 50px;
-        left: 442px; 
-        top: 315px; 
-        background: #FFFFFF; 
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 7px; 
-
-        /*this is for the placeholder text*/
-        font-family: "Oxygen", sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 24px;
-        line-height: 30px;
-    }
-
-    /*this is the passwword form area*/
-    .login-password{
-        position: absolute; 
-        width: 556px;
-        height: 50px;
-        left: 442px; 
-        top: 383px; 
-        background: #FFFFFF; 
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 7px; 
-
-        /*this is for the placeholder text*/
-        font-family: "Oxygen", sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 24px;
-        line-height: 30px;
-    }
-
-    /*this is the login button*/
-    .login-button{
-        font-family: 'Oxygen', sans-serif;
-        position: absolute;
-        text-transform: uppercase;
-        color: rgba(0, 0, 0, 0.54);
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 23px;
-        width: 151px;
-        height: 50px;
-        left: 847px;
-        top: 461px;
-        background: #EB5757;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-color: #EB5757;
-        border-radius: 7px;
-    }
-
-
-
-</style>
-
-
-<!--this is the account circle-->
 <!--this is the account circle-->
 <i class="material-icons anonymous-profile">account_circle</i>
 
@@ -108,9 +15,14 @@
     <p>
         {{ form.password(class_="login-password", placeholder=" PASSWORD", size=32) }}
     </p>
-    <!--p>{{ form.remember_me() }} {{ form.remember_me.label }}</p-->
-    <p>{{ form.submit(class_="login-button") }}</p>
-        <p><a id="signup-link" href="{{ url_for('register') }}">Don't have an account? </a></p>
-
+    <p id='remember'>
+        <nobr>{{ form.submit(class_="login-button") }}</nobr>
+        <nobr id='remember-label'>{{ form.remember_me.label }}</nobr> 
+        {{ form.remember_me(class_="remember-box") }}
+    </p>
+    
+    <p><a id="signup-link" href="{{ url_for('register') }}">Don't have an account? </a></p>
 </form>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 {% endblock %}
