--- a/src/templates/Settings/settings.html
+++ b/src/templates/Settings/settings.html
@@ -34,4 +34,5 @@
 		<input type="submit" name="submit_button" value="Delete Account">
 		<input type="submit" name="submit_button" value="Save Changes">
 	</form>
+	<p>Appointment-link: <a href={{link}}>{{link}}</a></p>
 {% endblock %}
