--- a/src/templates/Calendar/user-calendar.html
+++ b/src/templates/Calendar/user-calendar.html
@@ -2,22 +2,38 @@
 
 {% block user %}
 
-<div id="make-event-form">
+<script>
+    let ele = document.getElementsByClassName("whole-calendar")
+    if (ele) {
+        for (let i = 0 ; i<ele.length;i ++){
+            ele[i].classList.add("whole-calendar-size")
+        }
+    }
+</script>
+
 <form action="" method="post">
-    <h3>Appointment with {{user.username}}</h3>
-    {{form.event_date.label}}: {{form.event_date(type='hidden')}} 
-    <nobr id="date-holder">Select a date from above</nobr> <br>
-    {{form.event_month(type='hidden')}}
-    {{form.event_year(type='hidden')}}
-    {{form.guest_name.label}}: {{form.guest_name()}} <br>
-    {{form.event_name.label}}: {{form.event_name()}} <br>
-    <select id="open-slots" name="open-slots">
-        <option value="-1">Select An Appointment</option>
-    </select>
-    {{form.event_description.label}}: {{form.event_description()}} <br>
-    {{form.submit()}}
+    <div id="make-event-form" class="form-group">
+        <h3>Appointment with {{user.username}}</h3>
+        <label>{{form.event_date.label}}: </label> 
+        <nobr id="date-holder">Select a date from above</nobr> <br>
+        {{form.event_date(type='hidden')}}
+        {{form.event_month(type='hidden')}}
+        {{form.event_year(type='hidden')}}
+        <label>{{form.guest_name.label}}</label>
+        {{form.guest_name(type="text", class="form-control", placeholder="First and last name")}} <br>
+        <label>{{form.event_name.label}}</label>
+        {{form.event_name(type="text", class="form-control", placeholder="Event's Name")}} 
+        <div class="form-group">
+        <label id='choose-time-label'>Choose your time: </label>
+        <select id="open-slots" class="form-control" name="open-slots">
+            <option value="-1">Select An Appointment</option>
+        </select>
+        </div>
+        <label>{{form.event_description.label}} (optional)</label>
+        {{form.event_description(type="text", class="form-control", placeholder="Short description")}} 
+        {{form.submit(class="btn btn-light", id="appt-button")}}
+    </div>
 </form>
-<div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
 
@@ -34,14 +50,15 @@
             function(data) {
                 var slots = Math.floor(({{user.end_available}} - {{user.start_available}}) / {{user.meeting_length}});
                 data = data[0]
+                let currentDate = new Date()
                 data.forEach((events, index) => {
-                    if (document.getElementById(index)) {
+                    if (document.getElementById(index) && index>=currentDate.getDate()) {
                         var original = document.getElementById(index).innerHTML
                         document.getElementById(index).outerHTML = `
                         <li class='date-with-content click' id='${index}' onclick="selectDate(this)">
                             <p class='number-date'>${original}</p>
                             <div class="date-slots">
-                                ${slots-events.length} slots left
+                                <strong>${slots-events.length}</strong> slots left
                             </div>
                         </li>`
                     }
@@ -54,7 +71,7 @@
 <script type="text/javascript">
     function selectDate(event) {
         document.getElementById('open-slots').outerHTML=`
-            <select id="open-slots" name="open-slots">
+            <select id="open-slots" class="form-control" name="open-slots">
                 <option value="-1">Select An Appointment</option>
             </select>`
         let date = event.getElementsByClassName("number-date")[0].innerHTML
@@ -72,6 +89,10 @@
         document.getElementById("event_month").value={{month[0]}}
         document.getElementById("event_year").value={{year}}
         document.getElementById("date-holder").innerHTML = {{month[0]}}+"/"+date+"/"+{{year}}
+        //Add outliner
+        let ele = document.getElementsByClassName("today")[0]
+        if (ele) ele.classList.remove("today")
+        document.getElementById(date).classList.add("today")
     }
 </script>
 {% endblock %}
