--- a/src/templates/Calendar/user-calendar.html
+++ b/src/templates/Calendar/user-calendar.html
@@ -13,25 +13,35 @@
 
 <form action="" method="post">
     <div id="make-event-form" class="form-group">
-        <h3>Appointment with {{user.username}}</h3>
-        <label>{{form.event_date.label}}: </label> 
-        <nobr id="date-holder">Select a date from above</nobr> <br>
-        {{form.event_date(type='hidden')}}
-        {{form.event_month(type='hidden')}}
-        {{form.event_year(type='hidden')}}
-        <label>{{form.guest_name.label}}</label>
-        {{form.guest_name(type="text", class="form-control", placeholder="First and last name")}} <br>
-        <label>{{form.event_name.label}}</label>
-        {{form.event_name(type="text", class="form-control", placeholder="Event's Name")}} 
-        <div class="form-group">
-        <label id='choose-time-label'>Choose your time: </label>
-        <select id="open-slots" class="form-control" name="open-slots">
-            <option value="-1">Select An Appointment</option>
-        </select>
+        <div id='g-header'>
+            <h3>Appointment with {{user.username}}</h3>
+            <label>{{form.event_date.label}}: </label> 
+            <nobr id="date-holder">Select a date from above</nobr>
+            {{form.event_date(type='hidden')}}
+            {{form.event_month(type='hidden')}}
+            {{form.event_year(type='hidden')}}
         </div>
-        <label>{{form.event_description.label}} (optional)</label>
-        {{form.event_description(type="text", class="form-control", placeholder="Short description")}} 
-        {{form.submit(class="btn btn-light", id="appt-button")}}
+        <div id='g-name'>
+            <label>{{form.guest_name.label}}</label>
+            {{form.guest_name(type="text", class="form-control", placeholder="First and last name")}}
+        </div>
+        <div class="form-group" id='g-time'>
+            <label id='choose-time-label'>Choose your time: </label>
+            <select id="open-slots" class="form-control" name="open-slots">
+                <option value="-1">Select An Appointment</option>
+            </select>
+            </div>
+        <div id='g-event'>
+            <label>{{form.event_name.label}}</label>
+            {{form.event_name(type="text", class="form-control", placeholder="Event's Name")}} 
+        </div>
+        <div id='g-desc'>
+            <label>{{form.event_description.label}} (optional)</label>
+            {{form.event_description(type="text", class="form-control", placeholder="Short description")}}
+        </div>
+        <div id='g-submit'>
+            {{form.submit(class="btn btn-light", id="appt-button")}}
+        </div>
     </div>
 </form>
 
